testsuite/lab2-testsuite/good/subtyping/ass_double_int_split.cc
// Assigning int to double variable.

int main () {
 let double x;
 x = 1;
 return 0 ;
}