testsuite/lab2-testsuite/bad/ass_int_double_split.cc
// Assigning double to int variable.

int main () {
 let int x;
  x = 1.0;
 return 0 ;
}